--- a/pgadmin.yaml
+++ b/pgadmin.yaml
@@ -17,4 +17,4 @@ services:
 
     environment:
       PGADMIN_DEFAULT_EMAIL: 'admin@example.com'
-      PGADMIN_DEFAULT_PASSWORD: 'admin
+      PGADMIN_DEFAULT_PASSWORD: 'admin'
